--- a/Datavisualization.ipynb
+++ b/Datavisualization.ipynb
@@ -1099,6 +1099,72 @@
     ")\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cad25e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Step 3- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "70446eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m counts = {}\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mpath\u001b[49m, \u001b[33m\"\u001b[39m\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m, newline=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m, encoding=\u001b[33m\"\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m      3\u001b[39m     reader = csv.DictReader(f)\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m reader:\n",
+      "\u001b[31mNameError\u001b[39m: name 'path' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "counts = {}\n",
+    "with open(path, \"r\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        try:\n",
+    "            val = int(float(row[column_name]))\n",
+    "            counts[val] = counts.get(val, 0) + 1\n",
+    "        except (ValueError, KeyError):\n",
+    "            continue\n",
+    "\n",
+    "# Step 2: Get top 10 precincts by arrest count\n",
+    "top_precincts = sorted(counts.items(), key=lambda x: x[1], reverse=True)[:10]\n",
+    "\n",
+    "# Step 3: Print as a formatted text table\n",
+    "print(\"=\" * 45)\n",
+    "print(f\"{'Rank':<5}{'Precinct':<12}{'Arrest Count':>15}\")\n",
+    "print(\"=\" * 45)\n",
+    "for i, (precinct, cnt) in enumerate(top_precincts, start=1):\n",
+    "    print(f\"{i:<5}{precinct:<12}{cnt:>15,}\")\n",
+    "print(\"=\" * 45)\n",
+    "\n",
+    "# Step4: Create ASCII bar chart\n",
+    "# take top 10 by count\n",
+    "top = sorted(counts.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
+    "max_count = top[0][1] if top else 0\n",
+    "\n",
+    "def bar(count, max_count, width=40, fill=\"*\"):\n",
+    "    if max_count == 0:\n",
+    "        return \"\"\n",
+    "    filled = int(round(count / max_count * width))\n",
+    "    return fill * filled\n",
+    "\n",
+    "print(\"Top 10 Precincts — Arrest Counts (ASCII)\")\n",
+    "for precinct, cnt in top:\n",
+    "    print(f\"{precinct:>3}: {bar(cnt, max_count)} {cnt}\")"
+   ]
   }
  ],
  "metadata": {
