--- a/Datavisualization.ipynb
+++ b/Datavisualization.ipynb
@@ -1107,28 +1107,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Step 3- "
+    "Step 3- Drawing a bar chart to show the number of arrests in each precinct"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "70446eca",
+   "execution_count": 4,
+   "id": "cfedf051",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m counts = {}\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mpath\u001b[49m, \u001b[33m\"\u001b[39m\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m, newline=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m, encoding=\u001b[33m\"\u001b[39m\u001b[33mutf-8\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m      3\u001b[39m     reader = csv.DictReader(f)\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m reader:\n",
-      "\u001b[31mNameError\u001b[39m: name 'path' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=============================================\n",
+      "Rank Precinct       Arrest Count\n",
+      "=============================================\n",
+      "1    14                    7,947\n",
+      "2    40                    7,423\n",
+      "3    75                    6,953\n",
+      "4    103                   6,010\n",
+      "5    44                    5,978\n",
+      "6    46                    5,104\n",
+      "7    120                   4,877\n",
+      "8    73                    4,580\n",
+      "9    47                    4,560\n",
+      "10   110                   4,409\n",
+      "=============================================\n",
+      "Top 10 Precincts — Arrest Counts (ASCII)\n",
+      " 14: **************************************** 7947\n",
+      " 40: ************************************* 7423\n",
+      " 75: *********************************** 6953\n",
+      "103: ****************************** 6010\n",
+      " 44: ****************************** 5978\n",
+      " 46: ************************** 5104\n",
+      "120: ************************* 4877\n",
+      " 73: *********************** 4580\n",
+      " 47: *********************** 4560\n",
+      "110: ********************** 4409\n"
      ]
     }
    ],
    "source": [
+    "# I am creating a table and a bar chart to visualize the top 10 arrest precincts by number of arrests!\n",
+    "import csv\n",
+    "\n",
+    "# Load the data\n",
+    "path = \"NYPD_Arrest_Data__Year_to_Date_.csv\"\n",
+    "column_name = \"ARREST_PRECINCT\"\n",
+    "\n",
+    "# Step 1: Read counts of arrests per precinct\n",
     "counts = {}\n",
     "with open(path, \"r\", newline=\"\", encoding=\"utf-8\") as f:\n",
     "    reader = csv.DictReader(f)\n",
@@ -1163,7 +1191,7 @@
     "\n",
     "print(\"Top 10 Precincts — Arrest Counts (ASCII)\")\n",
     "for precinct, cnt in top:\n",
-    "    print(f\"{precinct:>3}: {bar(cnt, max_count)} {cnt}\")"
+    "    print(f\"{precinct:>3}: {bar(cnt, max_count)} {cnt}\")\n"
    ]
   }
  ],
