--- a/project_1.ipynb
+++ b/project_1.ipynb
@@ -141,6 +141,90 @@
     "print(f\"Median precinct: {median:.2f}\")\n",
     "print(f\"Mode precinct: {mode}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "28dcca2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=============================================\n",
+      "Rank Precinct       Arrest Count\n",
+      "=============================================\n",
+      "1    14                    7,947\n",
+      "2    40                    7,423\n",
+      "3    75                    6,953\n",
+      "4    103                   6,010\n",
+      "5    44                    5,978\n",
+      "6    46                    5,104\n",
+      "7    120                   4,877\n",
+      "8    73                    4,580\n",
+      "9    47                    4,560\n",
+      "10   110                   4,409\n",
+      "=============================================\n",
+      "Top 10 Precincts — Arrest Counts (ASCII)\n",
+      " 14: **************************************** 7947\n",
+      " 40: ************************************* 7423\n",
+      " 75: *********************************** 6953\n",
+      "103: ****************************** 6010\n",
+      " 44: ****************************** 5978\n",
+      " 46: ************************** 5104\n",
+      "120: ************************* 4877\n",
+      " 73: *********************** 4580\n",
+      " 47: *********************** 4560\n",
+      "110: ********************** 4409\n"
+     ]
+    }
+   ],
+   "source": [
+    "# I am creating a table and a bar chart to visualize the top 10 arrest precincts by number of arrests!\n",
+    "import csv\n",
+    "\n",
+    "# Load the data\n",
+    "path = \"NYPD_Arrest_Data__Year_to_Date_.csv\"\n",
+    "column_name = \"ARREST_PRECINCT\"\n",
+    "\n",
+    "# Step 1: Read counts of arrests per precinct\n",
+    "counts = {}\n",
+    "with open(path, \"r\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "    reader = csv.DictReader(f)\n",
+    "    for row in reader:\n",
+    "        try:\n",
+    "            val = int(float(row[column_name]))\n",
+    "            counts[val] = counts.get(val, 0) + 1\n",
+    "        except (ValueError, KeyError):\n",
+    "            continue\n",
+    "\n",
+    "# Step 2: Get top 10 precincts by arrest count\n",
+    "top_precincts = sorted(counts.items(), key=lambda x: x[1], reverse=True)[:10]\n",
+    "\n",
+    "# Step 3: Print as a formatted text table\n",
+    "print(\"=\" * 45)\n",
+    "print(f\"{'Rank':<5}{'Precinct':<12}{'Arrest Count':>15}\")\n",
+    "print(\"=\" * 45)\n",
+    "for i, (precinct, cnt) in enumerate(top_precincts, start=1):\n",
+    "    print(f\"{i:<5}{precinct:<12}{cnt:>15,}\")\n",
+    "print(\"=\" * 45)\n",
+    "\n",
+    "# Step4: Create ASCII bar chart\n",
+    "# take top 10 by count\n",
+    "top = sorted(counts.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
+    "max_count = top[0][1] if top else 0\n",
+    "\n",
+    "def bar(count, max_count, width=40, fill=\"*\"):\n",
+    "    if max_count == 0:\n",
+    "        return \"\"\n",
+    "    filled = int(round(count / max_count * width))\n",
+    "    return fill * filled\n",
+    "\n",
+    "print(\"Top 10 Precincts — Arrest Counts (ASCII)\")\n",
+    "for precinct, cnt in top:\n",
+    "    print(f\"{precinct:>3}: {bar(cnt, max_count)} {cnt}\")\n"
+   ]
   }
  ],
  "metadata": {
