--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "23b99bae",
+   "id": "234787fb",
    "metadata": {},
    "source": [
     "# Project 1\n",
@@ -12,16 +12,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c968d7",
+   "id": "7f2a266a",
    "metadata": {},
    "source": [
-    "# Step 1- Load the data"
+    "# Part A: Using Pandas to calculate the Mean, Median, and Mode"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32a9c65c",
+   "id": "b0b374af",
    "metadata": {},
    "outputs": [
     {
@@ -63,11 +63,15 @@
       "3                                 POINT (0 0)  \n",
       "4  POINT (-73.9240290899499 40.6894642952604)  \n",
       "['ARREST_KEY', 'ARREST_DATE', 'PD_CD', 'PD_DESC', 'KY_CD', 'OFNS_DESC', 'LAW_CODE', 'LAW_CAT_CD', 'ARREST_BORO', 'ARREST_PRECINCT', 'JURISDICTION_CODE', 'AGE_GROUP', 'PERP_SEX', 'PERP_RACE', 'X_COORD_CD', 'Y_COORD_CD', 'Latitude', 'Longitude', 'Location']\n",
-      "(212486, 19)\n"
+      "(212486, 19)\n",
+      "Mean precinct: 63.08\n",
+      "Median precinct: 62.00\n",
+      "Mode precinct: 14\n"
      ]
     }
    ],
    "source": [
+    "# Step 1- Load the data\n",
     "import pandas as pd\n",
     "\n",
     "# read the CSV file\n",
@@ -81,56 +85,15 @@
     "\n",
     "# display the number of rows and columns\n",
     "print(df.shape)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "920aedec",
-   "metadata": {},
-   "source": [
-    "# Step 2- I select a numeric column\n",
-    "I am going to select \"ARREST_PRECINCT\"!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db1ab9bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "# Step 2- I select a numeric column, I am going to select \"ARREST_PRECINCT\"!\n",
     "Numeric_col = 'ARREST_PRECINCT'\n",
     "\n",
     "# covert the selected column to numberic type\n",
-    "df[Numeric_col] = pd.to_numeric(df[Numeric_col], errors='coerce')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e8deaf0",
-   "metadata": {},
-   "source": [
-    "# Step 3- Use Pandas to compute \"the mean\", \"the median\", and \"the mode\" of the \"ARREST_PRECINCT\" column"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e301331c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean precinct: 63.08\n",
-      "Median precinct: 62.00\n",
-      "Mode precinct: 14\n"
-     ]
-    }
-   ],
-   "source": [
+    "df[Numeric_col] = pd.to_numeric(df[Numeric_col], errors='coerce')\n",
+    "\n",
+    "\n",
+    "# Step 3- Use Pandas to compute \"the mean\", \"the median\", and \"the mode\" of the \"ARREST_PRECINCT\" column\n",
     "# compute the mean of the arrest_age column\n",
     "mean= df ['ARREST_PRECINCT'].mean()\n",
     "\n",
@@ -142,23 +105,34 @@
     "\n",
     "print(f\"Mean precinct: {mean:.2f}\")\n",
     "print(f\"Median precinct: {median:.2f}\")\n",
-    "print(f\"Mode precinct: {mode}\")\n"
+    "print(f\"Mode precinct: {mode}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c69c4e47",
+   "id": "cae4c79d",
    "metadata": {},
    "source": [
-    "# Step 4- Comparing with hard-coding approach!"
+    "# Part B: Comparing with hard-coding approach by using Python"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b412d852",
+   "id": "032e04c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 212486 numeric values from ARREST_PRECINCT\n",
+      "Mean: 63.08\n",
+      "median: 62.00\n",
+      "mode: 14.00\n"
+     ]
+    }
+   ],
    "source": [
     "# I am using the hard-way to calculate mean, median, and mode!\n",
     "import csv\n",
@@ -212,21 +186,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "910f86de",
+   "id": "4c5548a6",
    "metadata": {},
    "source": [
-    "# Step 4- Data Visualization\n",
-    "Drawing a bar chart to show the number of arrests in each precinct"
+    "# Part C: Data Visualization\n",
+    "## Drawing a bar chart to show the number of arrests in each precinct\n",
+    "### # I am creating a table and a bar chart to visualize the top 10 arrest precincts by number of arrests!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87e0dec3",
+   "id": "07665c8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=============================================\n",
+      "Rank Precinct       Arrest Count\n",
+      "=============================================\n",
+      "1    14                    7,947\n",
+      "2    40                    7,423\n",
+      "3    75                    6,953\n",
+      "4    103                   6,010\n",
+      "5    44                    5,978\n",
+      "6    46                    5,104\n",
+      "7    120                   4,877\n",
+      "8    73                    4,580\n",
+      "9    47                    4,560\n",
+      "10   110                   4,409\n",
+      "=============================================\n",
+      "Top 10 Precincts — Arrest Counts (bar chart)\n",
+      " 14: **************************************** 7947\n",
+      " 40: ************************************* 7423\n",
+      " 75: *********************************** 6953\n",
+      "103: ****************************** 6010\n",
+      " 44: ****************************** 5978\n",
+      " 46: ************************** 5104\n",
+      "120: ************************* 4877\n",
+      " 73: *********************** 4580\n",
+      " 47: *********************** 4560\n",
+      "110: ********************** 4409\n"
+     ]
+    }
+   ],
    "source": [
-    "# I am creating a table and a bar chart to visualize the top 10 arrest precincts by number of arrests!\n",
     "import csv\n",
     "\n",
     "# Load the data\n",
@@ -255,7 +261,7 @@
     "    print(f\"{i:<5}{precinct:<12}{cnt:>15,}\")\n",
     "print(\"=\" * 45)\n",
     "\n",
-    "# Step4: Create ASCII bar chart\n",
+    "# Step4: Create bar chart\n",
     "# take top 10 by count\n",
     "top = sorted(counts.items(), key=lambda kv: kv[1], reverse=True)[:10]\n",
     "max_count = top[0][1] if top else 0\n",
@@ -266,7 +272,7 @@
     "    filled = int(round(count / max_count * width))\n",
     "    return fill * filled\n",
     "\n",
-    "print(\"Top 10 Precincts — Arrest Counts (ASCII)\")\n",
+    "print(\"Top 10 Precincts — Arrest Counts (bar chart)\")\n",
     "for precinct, cnt in top:\n",
     "    print(f\"{precinct:>3}: {bar(cnt, max_count)} {cnt}\")"
    ]
