--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -12,6 +12,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7ea848c",
+   "metadata": {},
+   "source": [
+    "# Download the NYPD Arrest Data CSV from online website"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec510e1b",
+   "metadata": {},
+   "source": [
+    "URL: https://catalog.data.gov/dataset/nypd-arrest-data-year-to-date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7f2a266a",
    "metadata": {},
    "source": [
