--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Project 1\n",
     "\n",
-    "Today, I using the pandas and Python to analyze NYPD arrest data from 2025, focusing on which precincts have the most arrests. New York City has 77 police precincts, numbered from 1 to 123 (with some gaps). By analyzing the precinct numbers, we can understand the distribution of arrests across the city."
+    "Today, I using the Pandas and Python to analyze NYPD arrest data from 2025, focusing on which precincts have the most arrests. New York City has 77 police precincts, numbered from 1 to 123 (with some gaps). By analyzing the precinct numbers, we can understand the distribution of arrests across the city."
    ]
   },
   {
