--- a/projectt_1.ipynb
+++ b/projectt_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f42f4dbe",
+   "id": "7e7fb716",
    "metadata": {},
    "source": [
     "# Project 1\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "027a0f75",
+   "id": "75d0f73f",
    "metadata": {},
    "source": [
     "# Download the NYPD Arrest Data CSV from online website"
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ad08b9f",
+   "id": "a0aad373",
    "metadata": {},
    "source": [
     "URL: https://catalog.data.gov/dataset/nypd-arrest-data-year-to-date"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdd3652d",
+   "id": "cac957ca",
    "metadata": {},
    "source": [
     "# Part A: Using Pandas to calculate the Mean, Median, and Mode"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f13b140d",
+   "id": "c8704568",
    "metadata": {},
    "source": [
     "## Step 1\n",
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd9220bf",
+   "execution_count": 1,
+   "id": "21e27691",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b208e2e8",
+   "id": "efbecb70",
    "metadata": {},
    "source": [
     "## Step 2\n",
@@ -119,8 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6976edb7",
+   "execution_count": 2,
+   "id": "fce9ccda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4a9528",
+   "id": "ced72a73",
    "metadata": {},
    "source": [
     "## Step 3\n",
@@ -141,8 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5e378192",
+   "execution_count": 3,
+   "id": "b50b56e4",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc9eef24",
+   "id": "063cdef7",
    "metadata": {},
    "source": [
     "# Part B: Comparing with hard-coding approach by using Python\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ab36093",
+   "id": "6c1e508a",
    "metadata": {},
    "source": [
     "## Step 1\n",
@@ -190,8 +190,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4a1b4868",
+   "execution_count": 5,
+   "id": "35125e20",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dd83757",
+   "id": "598ac718",
    "metadata": {},
    "source": [
     "## Step 2\n",
@@ -237,8 +237,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c2faa50",
+   "execution_count": 6,
+   "id": "c257780f",
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4485113",
+   "id": "6472b6db",
    "metadata": {},
    "source": [
     "# Part C: Data Visualization\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c09db87a",
+   "id": "6feacdb2",
    "metadata": {},
    "source": [
     "## Step 1\n",
@@ -298,8 +298,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3e616a9f",
+   "execution_count": 7,
+   "id": "bea3563d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7141693e",
+   "id": "6f85a97f",
    "metadata": {},
    "source": [
     "## Step 2\n",
@@ -332,8 +332,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f859ed71",
+   "execution_count": 10,
+   "id": "89df4ae2",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90f5994",
+   "id": "a4e2aabf",
    "metadata": {},
    "source": [
     "## Step 3\n",
@@ -378,8 +378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b739b817",
+   "execution_count": 11,
+   "id": "a04781a9",
    "metadata": {},
    "outputs": [
     {
@@ -418,8 +418,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.7)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
